# UESS

./: .gitignore  Cargo.toml
uess-commands/: Cargo.toml
uess-commands/src/: lib.rs
uess-commands/src/aur_check/: mod.rs  spam.txt
uess-commands/src/cleanse/: mod.rs
uess-commands/src/compile/: mod.rs
uess-commands/src/source_code/: mod.rs
uess-core/: Cargo.toml
uess-core/src/: honeypot.rs  main.rs  qotd.rs
