[package]
name = "uess-core"
version = "0.1.0"
edition = "2021"

[dependencies]
uess-commands = { path = "../uess-commands" }
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "model", "builder", "http", "rustls_backend"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
dotenvy = "0.15"
