[package]
name = "uess-core"
version = "0.1.0"
edition = "2021"

[dependencies]
uess-commands = { path = "../uess-commands" }
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "model", "builder", "http", "rustls_backend"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
dotenvy = "0.15"
chrono = "0.4"
chrono-tz = "0.10"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
